# travel-ai-translator

./: .gitignore  LICENSE  README.md  app.py  flask_app.py  main.py  pyproject.toml  requirements.txt  tool.py
.github/workflows/: main_travel-ai-translator.yml
static/css/: styles.css
static/js/: app.js
static/policies/: PRIVACY_POLICY.md
templates/: index.html
